GtkGestureZoom: Don't leak the list of sequences

https://bugzilla.gnome.org/show_bug.cgi?id=789149